--- a/app/weather/08e-metrics-weather-services.yaml
+++ b/app/weather/08e-metrics-weather-services.yaml
@@ -57,7 +57,7 @@ spec:
             name: elastic-apm-agent          
           env:
             - name: spring.application.name
-              value: weather-services
+              value: weather-services-naga
             - name: server.port
               value: "8080"
             - name: ELASTIC_APM_SERVER_URL 
@@ -71,7 +71,7 @@ spec:
                   name: app-config
                   key: ELASTIC_APM_APPLICATION_PACKAGES
             - name: ELASTIC_APM_SERVICE_NAME 
-              value: "weather-services" 
+              value: "weather-services-naga" 
             - name: ELASTIC_APM_ENVIRONMENT 
               value: prod
             - name: ELASTIC_APM_LOG_LEVEL 
@@ -81,7 +81,7 @@ spec:
             - name: management.endpoints.web.exposure.include
               value: "*"
             - name: spring.application.name
-              value: weather-services
+              value: weather-services-naga
             - name: management.server.port
               value: "8888"
             - name: management.metrics.web.server.request.autotime.enabled
