--- a/app/weather/06c-microservices-weather-db.yaml
+++ b/app/weather/06c-microservices-weather-db.yaml
@@ -32,6 +32,13 @@ spec:
         name: data
       containers:
       - image: mariadb:10.3
+        resources: 
+          limits:
+            cpu: 25m
+            memory: 128Mi
+          requests:
+            cpu: 25m
+            memory: 128Mi 
         name: mariadb
         ports:
         - containerPort: 3306
